vcs/specs/parser/fail/types/empty_throws.vr
// @test: parse-fail
// @level: L0
// @tags: parser, types, function, throws, error
// @description: Test detection of empty throws clause
// @expected-error: E018

// throws clause must have at least one error type
type Callback is fn() throws();
